[project]
name = "linux_isolate_process"
version = "0.1.3"
authors = [
  { name="Aditya Pande", email="adityapande@google.com" },
]
description = "A package to isolate linux processes"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/adityapande-1995/linux_isolate_process"
